k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spoolman-print
  namespace: spoolman
spec:
  selector:
    app: spoolman-print
  ports:
    - port: 80
      targetPort: 80
